created components with styles

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,7 +1,7 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-      src="https://i.stack.imgur.com/luaq2.png"
+      src="https://is4-ssl.mzstatic.com/image/thumb/VnBb-B3HQ5sNmXcNw3w21Q/2000x1125.webp"
       alt=""
       srcset=""
       height="200px"
