--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,18 @@
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
+
 <app-menu-title></app-menu-title>
+
+
 <div class="container__articles">
   <div class="artices__main">
-    <app-big-card>
-
-    </app-big-card>
+    <app-big-card></app-big-card>
   </div>
   <div class="articles__others">
-
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
   </div>
 
 
