dynamic component properties

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,18 +1,18 @@
 <div class="container__big-card">
   <div class="big-card__photo">
     <img
-      src="https://is4-ssl.mzstatic.com/image/thumb/VnBb-B3HQ5sNmXcNw3w21Q/2000x1125.webp"
+      src="{{photoCover}}"
       alt=""
       srcset=""
       height="200px"
     >
   </div>
   <div class="big-card__title">
-    <h1><a href="">Saiu a nova versão do Angular</a></h1>
+    <h1><a href="">{{cardTitle}}</a></h1>
   </div>
   <div class="big-card__description">
     <p>
-      <a href="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In ut lacus at nisi aliquam lacinia quis a metus. Sed lacinia, odio sit amet rhoncus volutpat, diam orci dignissim leo, quis finibus nulla justo sodales magna. Cras ultrices arcu non urna rhoncus, quis semper elit finibus. Etiam viverra dignissim augue at tincidunt. Mauris scelerisque mattis orci, vitae tempor dolor lacinia sit amet. Nulla tempor in eros id mattis. Mauris vel hendrerit arcu.</a>
+      <a href="">{{cardDescription}}</a>
     </p>
   </div>
 </div>
