--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,25 +1,26 @@
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
 
 <app-menu-title></app-menu-title>
 
 
 <div class="container__articles">
   <div class="artices__main">
-    <app-big-card photoCover="https://is4-ssl.mzstatic.com/image/thumb/VnBb-B3HQ5sNmXcNw3w21Q/2000x1125.webp"
+    <app-big-card id = "1"
+                  photoCover="https://is4-ssl.mzstatic.com/image/thumb/VnBb-B3HQ5sNmXcNw3w21Q/2000x1125.webp"
                   cardTitle="Novo Homem de Ferro em 3D"
                   cardDescription="Marvel anuncia novo Homem de Ferro"
     ></app-big-card>
   </div>
   <div class="articles__others">
-    <app-small-card photoCover="https://streamingsbrasil.com/wp-content/uploads/2020/11/series-marvel-disney-plus-.png"
+    <app-small-card id = "2"
+                    photoCover="https://streamingsbrasil.com/wp-content/uploads/2020/11/series-marvel-disney-plus-.png"
                     cardTitle="Nova série anunciada no Disney+"
     ></app-small-card>
-    <app-small-card photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F6482D58C8BB4D899FA4682BF27652C3E1BB73F5971E5F963994112F26A73690/scale?width=1200&aspectRatio=1.78&format=jpeg"
+    <app-small-card id = "3"
+                    photoCover="https://prod-ripcut-delivery.disney-plus.net/v1/variant/disney/F6482D58C8BB4D899FA4682BF27652C3E1BB73F5971E5F963994112F26A73690/scale?width=1200&aspectRatio=1.78&format=jpeg"
                     cardTitle="Novo filme do pantera negra será lançado em breve"
     ></app-small-card>
-    <app-small-card photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
+    <app-small-card id = "4"
+                    photoCover="https://midias.correiobraziliense.com.br/_midias/jpg/2022/07/22/675x450/1_xmen-26096415.jpeg?20220722171339?20220722171339"
                     cardTitle="Novo filme dos x-men está em pós produção, afirma diretor"
     ></app-small-card>
   </div>
